Code/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | /* empty */

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt

    7 ExtDecList: VarDec
    8           | VarDec COMMA ExtDecList

    9 Specifier: TYPE
   10          | StructSpecifier

   11 StructSpecifier: STRUCT OptTag LC DefList RC
   12                | STRUCT Tag

   13 OptTag: ID
   14       | /* empty */

   15 Tag: ID

   16 VarDec: ID
   17       | VarDec LB INT RB
   18       | VarDec LB error RB

   19 FunDec: ID LP VarList RP
   20       | ID LP RP
   21       | ID LP error RP

   22 VarList: ParamDec COMMA VarList
   23        | ParamDec

   24 ParamDec: Specifier VarDec

   25 CompSt: LC DefList StmtList RC

   26 StmtList: Stmt StmtList
   27         | /* empty */

   28 Stmt: Exp SEMI
   29     | error SEMI
   30     | CompSt
   31     | RETURN Exp SEMI
   32     | RETURN error SEMI
   33     | IF LP Exp RP Stmt
   34     | IF LP Exp RP Stmt ELSE Stmt
   35     | WHILE LP Exp RP Stmt

   36 DefList: Def DefList
   37        | /* empty */

   38 Def: Specifier DecList SEMI
   39    | Specifier error SEMI

   40 DecList: Dec
   41        | Dec COMMA DecList

   42 Dec: VarDec
   43    | VarDec ASSIGNOP Exp

   44 Exp: Exp ASSIGNOP Exp
   45    | Exp OR Exp
   46    | Exp AND Exp
   47    | Exp RELOP Exp
   48    | Exp MINUS Exp
   49    | Exp PLUS Exp
   50    | Exp DIV Exp
   51    | Exp STAR Exp
   52    | MINUS Exp
   53    | NOT Exp
   54    | Exp LB error RB
   55    | Exp LB Exp RB
   56    | ID LP RP
   57    | ID LP error RP
   58    | ID LP Args RP
   59    | LP Exp RP
   60    | Exp DOT ID
   61    | ID
   62    | INT
   63    | FLOAT

   64 Args: Exp COMMA Args
   65     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 18 21 29 32 39 54 57
SEMI (258) 4 5 28 29 31 32 38 39
COMMA (259) 8 22 41 64
ASSIGNOP (260) 43 44
RELOP (261) 47
PLUS (262) 49
MINUS (263) 48 52
STAR (264) 51
DIV (265) 50
AND (266) 46
OR (267) 45
NOT (268) 53
DOT (269) 60
LP (270) 19 20 21 33 34 35 56 57 58 59
RP (271) 19 20 21 33 34 35 56 57 58 59
LB (272) 17 18 54 55
RB (273) 17 18 54 55
LC (274) 11 25
RC (275) 11 25
TYPE (276) 9
STRUCT (277) 11 12
IF (278) 33 34
ELSE (279) 34
RETURN (280) 31 32
WHILE (281) 35
INT (282) 17 62
FLOAT (283) 63
ID (284) 13 15 16 19 20 21 56 57 58 60 61
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6, on right: 2
ExtDecList (35)
    on left: 7 8, on right: 4 8
Specifier (36)
    on left: 9 10, on right: 4 5 6 24 38 39
StructSpecifier (37)
    on left: 11 12, on right: 10
OptTag (38)
    on left: 13 14, on right: 11
Tag (39)
    on left: 15, on right: 12
VarDec (40)
    on left: 16 17 18, on right: 7 8 17 18 24 42 43
FunDec (41)
    on left: 19 20 21, on right: 6
VarList (42)
    on left: 22 23, on right: 19 22
ParamDec (43)
    on left: 24, on right: 22 23
CompSt (44)
    on left: 25, on right: 6 30
StmtList (45)
    on left: 26 27, on right: 25 26
Stmt (46)
    on left: 28 29 30 31 32 33 34 35, on right: 26 33 34 35
DefList (47)
    on left: 36 37, on right: 11 25 36
Def (48)
    on left: 38 39, on right: 36
DecList (49)
    on left: 40 41, on right: 38 41
Dec (50)
    on left: 42 43, on right: 40 41
Exp (51)
    on left: 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61
    62 63, on right: 28 31 33 34 35 43 44 45 46 47 48 49 50 51 52 53
    54 55 59 60 64 65
Args (52)
    on left: 64 65, on right: 58 64


state 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


state 1

    9 Specifier: TYPE .

    $default  reduce using rule 9 (Specifier)


state 2

   11 StructSpecifier: STRUCT . OptTag LC DefList RC
   12                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 14 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


state 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


state 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


state 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


state 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    SEMI  shift, and go to state 13
    ID    shift, and go to state 14

    ExtDecList  go to state 15
    VarDec      go to state 16
    FunDec      go to state 17


state 7

   10 Specifier: StructSpecifier .

    $default  reduce using rule 10 (Specifier)


state 8

   13 OptTag: ID .
   15 Tag: ID .

    LC        reduce using rule 13 (OptTag)
    $default  reduce using rule 15 (Tag)


state 9

   11 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 18


state 10

   12 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 12 (StructSpecifier)


state 11

    0 $accept: Program $end .

    $default  accept


state 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


state 13

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


state 14

   16 VarDec: ID .
   19 FunDec: ID . LP VarList RP
   20       | ID . LP RP
   21       | ID . LP error RP

    LP  shift, and go to state 19

    $default  reduce using rule 16 (VarDec)


state 15

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 20


state 16

    7 ExtDecList: VarDec .
    8           | VarDec . COMMA ExtDecList
   17 VarDec: VarDec . LB INT RB
   18       | VarDec . LB error RB

    COMMA  shift, and go to state 21
    LB     shift, and go to state 22

    $default  reduce using rule 7 (ExtDecList)


state 17

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 23

    CompSt  go to state 24


state 18

   11 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 37 (DefList)

    Specifier        go to state 25
    StructSpecifier  go to state 7
    DefList          go to state 26
    Def              go to state 27


state 19

   19 FunDec: ID LP . VarList RP
   20       | ID LP . RP
   21       | ID LP . error RP

    error   shift, and go to state 28
    RP      shift, and go to state 29
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 30
    StructSpecifier  go to state 7
    VarList          go to state 31
    ParamDec         go to state 32


state 20

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


state 21

    8 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 33

    ExtDecList  go to state 34
    VarDec      go to state 16


state 22

   17 VarDec: VarDec LB . INT RB
   18       | VarDec LB . error RB

    error  shift, and go to state 35
    INT    shift, and go to state 36


state 23

   25 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 37 (DefList)

    Specifier        go to state 25
    StructSpecifier  go to state 7
    DefList          go to state 37
    Def              go to state 27


state 24

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


state 25

   38 Def: Specifier . DecList SEMI
   39    | Specifier . error SEMI

    error  shift, and go to state 38
    ID     shift, and go to state 33

    VarDec   go to state 39
    DecList  go to state 40
    Dec      go to state 41


state 26

   11 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 42


state 27

   36 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 37 (DefList)

    Specifier        go to state 25
    StructSpecifier  go to state 7
    DefList          go to state 43
    Def              go to state 27


state 28

   21 FunDec: ID LP error . RP

    RP  shift, and go to state 44


state 29

   20 FunDec: ID LP RP .

    $default  reduce using rule 20 (FunDec)


state 30

   24 ParamDec: Specifier . VarDec

    ID  shift, and go to state 33

    VarDec  go to state 45


state 31

   19 FunDec: ID LP VarList . RP

    RP  shift, and go to state 46


state 32

   22 VarList: ParamDec . COMMA VarList
   23        | ParamDec .

    COMMA  shift, and go to state 47

    $default  reduce using rule 23 (VarList)


state 33

   16 VarDec: ID .

    $default  reduce using rule 16 (VarDec)


state 34

    8 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 8 (ExtDecList)


state 35

   18 VarDec: VarDec LB error . RB

    RB  shift, and go to state 48


state 36

   17 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 49


state 37

   25 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 50
    MINUS   shift, and go to state 51
    NOT     shift, and go to state 52
    LP      shift, and go to state 53
    LC      shift, and go to state 23
    IF      shift, and go to state 54
    RETURN  shift, and go to state 55
    WHILE   shift, and go to state 56
    INT     shift, and go to state 57
    FLOAT   shift, and go to state 58
    ID      shift, and go to state 59

    RC  reduce using rule 27 (StmtList)

    CompSt    go to state 60
    StmtList  go to state 61
    Stmt      go to state 62
    Exp       go to state 63


state 38

   39 Def: Specifier error . SEMI

    SEMI  shift, and go to state 64


state 39

   17 VarDec: VarDec . LB INT RB
   18       | VarDec . LB error RB
   42 Dec: VarDec .
   43    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 65
    LB        shift, and go to state 22

    $default  reduce using rule 42 (Dec)


state 40

   38 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 66


state 41

   40 DecList: Dec .
   41        | Dec . COMMA DecList

    COMMA  shift, and go to state 67

    $default  reduce using rule 40 (DecList)


state 42

   11 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 11 (StructSpecifier)


state 43

   36 DefList: Def DefList .

    $default  reduce using rule 36 (DefList)


state 44

   21 FunDec: ID LP error RP .

    $default  reduce using rule 21 (FunDec)


state 45

   17 VarDec: VarDec . LB INT RB
   18       | VarDec . LB error RB
   24 ParamDec: Specifier VarDec .

    LB  shift, and go to state 22

    $default  reduce using rule 24 (ParamDec)


state 46

   19 FunDec: ID LP VarList RP .

    $default  reduce using rule 19 (FunDec)


state 47

   22 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 30
    StructSpecifier  go to state 7
    VarList          go to state 68
    ParamDec         go to state 32


state 48

   18 VarDec: VarDec LB error RB .

    $default  reduce using rule 18 (VarDec)


state 49

   17 VarDec: VarDec LB INT RB .

    $default  reduce using rule 17 (VarDec)


state 50

   29 Stmt: error . SEMI

    SEMI  shift, and go to state 69


state 51

   52 Exp: MINUS . Exp

    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59

    Exp  go to state 70


state 52

   53 Exp: NOT . Exp

    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59

    Exp  go to state 71


state 53

   59 Exp: LP . Exp RP

    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59

    Exp  go to state 72


state 54

   33 Stmt: IF . LP Exp RP Stmt
   34     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 73


state 55

   31 Stmt: RETURN . Exp SEMI
   32     | RETURN . error SEMI

    error  shift, and go to state 74
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59

    Exp  go to state 75


state 56

   35 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 76


state 57

   62 Exp: INT .

    $default  reduce using rule 62 (Exp)


state 58

   63 Exp: FLOAT .

    $default  reduce using rule 63 (Exp)


state 59

   56 Exp: ID . LP RP
   57    | ID . LP error RP
   58    | ID . LP Args RP
   61    | ID .

    LP  shift, and go to state 77

    $default  reduce using rule 61 (Exp)


state 60

   30 Stmt: CompSt .

    $default  reduce using rule 30 (Stmt)


state 61

   25 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 78


state 62

   26 StmtList: Stmt . StmtList

    error   shift, and go to state 50
    MINUS   shift, and go to state 51
    NOT     shift, and go to state 52
    LP      shift, and go to state 53
    LC      shift, and go to state 23
    IF      shift, and go to state 54
    RETURN  shift, and go to state 55
    WHILE   shift, and go to state 56
    INT     shift, and go to state 57
    FLOAT   shift, and go to state 58
    ID      shift, and go to state 59

    RC  reduce using rule 27 (StmtList)

    CompSt    go to state 60
    StmtList  go to state 79
    Stmt      go to state 62
    Exp       go to state 63


state 63

   28 Stmt: Exp . SEMI
   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . OR Exp
   46    | Exp . AND Exp
   47    | Exp . RELOP Exp
   48    | Exp . MINUS Exp
   49    | Exp . PLUS Exp
   50    | Exp . DIV Exp
   51    | Exp . STAR Exp
   54    | Exp . LB error RB
   55    | Exp . LB Exp RB
   60    | Exp . DOT ID

    SEMI      shift, and go to state 80
    ASSIGNOP  shift, and go to state 81
    RELOP     shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    AND       shift, and go to state 87
    OR        shift, and go to state 88
    DOT       shift, and go to state 89
    LB        shift, and go to state 90


state 64

   39 Def: Specifier error SEMI .

    $default  reduce using rule 39 (Def)


state 65

   43 Dec: VarDec ASSIGNOP . Exp

    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59

    Exp  go to state 91


state 66

   38 Def: Specifier DecList SEMI .

    $default  reduce using rule 38 (Def)


state 67

   41 DecList: Dec COMMA . DecList

    ID  shift, and go to state 33

    VarDec   go to state 39
    DecList  go to state 92
    Dec      go to state 41


state 68

   22 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 22 (VarList)


state 69

   29 Stmt: error SEMI .

    $default  reduce using rule 29 (Stmt)


state 70

   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . OR Exp
   46    | Exp . AND Exp
   47    | Exp . RELOP Exp
   48    | Exp . MINUS Exp
   49    | Exp . PLUS Exp
   50    | Exp . DIV Exp
   51    | Exp . STAR Exp
   52    | MINUS Exp .
   54    | Exp . LB error RB
   55    | Exp . LB Exp RB
   60    | Exp . DOT ID

    STAR  shift, and go to state 85
    DIV   shift, and go to state 86
    DOT   shift, and go to state 89
    LB    shift, and go to state 90

    $default  reduce using rule 52 (Exp)


state 71

   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . OR Exp
   46    | Exp . AND Exp
   47    | Exp . RELOP Exp
   48    | Exp . MINUS Exp
   49    | Exp . PLUS Exp
   50    | Exp . DIV Exp
   51    | Exp . STAR Exp
   53    | NOT Exp .
   54    | Exp . LB error RB
   55    | Exp . LB Exp RB
   60    | Exp . DOT ID

    DOT  shift, and go to state 89
    LB   shift, and go to state 90

    $default  reduce using rule 53 (Exp)


state 72

   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . OR Exp
   46    | Exp . AND Exp
   47    | Exp . RELOP Exp
   48    | Exp . MINUS Exp
   49    | Exp . PLUS Exp
   50    | Exp . DIV Exp
   51    | Exp . STAR Exp
   54    | Exp . LB error RB
   55    | Exp . LB Exp RB
   59    | LP Exp . RP
   60    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 81
    RELOP     shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    AND       shift, and go to state 87
    OR        shift, and go to state 88
    DOT       shift, and go to state 89
    RP        shift, and go to state 93
    LB        shift, and go to state 90


state 73

   33 Stmt: IF LP . Exp RP Stmt
   34     | IF LP . Exp RP Stmt ELSE Stmt

    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59

    Exp  go to state 94


state 74

   32 Stmt: RETURN error . SEMI

    SEMI  shift, and go to state 95


state 75

   31 Stmt: RETURN Exp . SEMI
   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . OR Exp
   46    | Exp . AND Exp
   47    | Exp . RELOP Exp
   48    | Exp . MINUS Exp
   49    | Exp . PLUS Exp
   50    | Exp . DIV Exp
   51    | Exp . STAR Exp
   54    | Exp . LB error RB
   55    | Exp . LB Exp RB
   60    | Exp . DOT ID

    SEMI      shift, and go to state 96
    ASSIGNOP  shift, and go to state 81
    RELOP     shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    AND       shift, and go to state 87
    OR        shift, and go to state 88
    DOT       shift, and go to state 89
    LB        shift, and go to state 90


state 76

   35 Stmt: WHILE LP . Exp RP Stmt

    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59

    Exp  go to state 97


state 77

   56 Exp: ID LP . RP
   57    | ID LP . error RP
   58    | ID LP . Args RP

    error  shift, and go to state 98
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    RP     shift, and go to state 99
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59

    Exp   go to state 100
    Args  go to state 101


state 78

   25 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 25 (CompSt)


state 79

   26 StmtList: Stmt StmtList .

    $default  reduce using rule 26 (StmtList)


state 80

   28 Stmt: Exp SEMI .

    $default  reduce using rule 28 (Stmt)


state 81

   44 Exp: Exp ASSIGNOP . Exp

    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59

    Exp  go to state 102


state 82

   47 Exp: Exp RELOP . Exp

    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59

    Exp  go to state 103


state 83

   49 Exp: Exp PLUS . Exp

    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59

    Exp  go to state 104


state 84

   48 Exp: Exp MINUS . Exp

    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59

    Exp  go to state 105


state 85

   51 Exp: Exp STAR . Exp

    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59

    Exp  go to state 106


state 86

   50 Exp: Exp DIV . Exp

    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59

    Exp  go to state 107


state 87

   46 Exp: Exp AND . Exp

    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59

    Exp  go to state 108


state 88

   45 Exp: Exp OR . Exp

    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59

    Exp  go to state 109


state 89

   60 Exp: Exp DOT . ID

    ID  shift, and go to state 110


state 90

   54 Exp: Exp LB . error RB
   55    | Exp LB . Exp RB

    error  shift, and go to state 111
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59

    Exp  go to state 112


state 91

   43 Dec: VarDec ASSIGNOP Exp .
   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . OR Exp
   46    | Exp . AND Exp
   47    | Exp . RELOP Exp
   48    | Exp . MINUS Exp
   49    | Exp . PLUS Exp
   50    | Exp . DIV Exp
   51    | Exp . STAR Exp
   54    | Exp . LB error RB
   55    | Exp . LB Exp RB
   60    | Exp . DOT ID
